fix: hot fix of navbar in dark mode

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -73,5 +73,7 @@ html.dark-mode
         background: $dark !important
     .navbar
         background: $dark !important
+    .navbar-menu
+        background: $dark !important
     .navbar-burger
         color: #ffffff !important
